--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -41,7 +41,7 @@ cmake --build build-msvc-2022 --parallel --target install
 
 ## 安装 OpenCV
 
-请参考 [deps/OpenCV/README.md](deps/OpenCV/README.md) 正确安装 OpenCV 依赖。
+请参考 [deps/OpenCV/README.md](../../deps/OpenCV/README.md) 正确安装 OpenCV 依赖。
 
 > 本项目调整了部分 CMake 构建规则，请务必按照说明将 OpenCV 安装至 deps/OpenCV 目录，即便你已经通过 vcpkg 或其他方式在开发环境安装了该依赖。
 
