--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -10,56 +10,21 @@
 git clone https://github.com//maa-whmx.git --recursive
 ```
 
-## 安装 Qt6
-
-使用 MSVC 构建 Qt6 并安装至 CMake 库搜索路径，请至少在 Release 配置下构建 qtbase、qtscxml、tools 的动态链接库。
-
-参考流程：
-
-1. 下载 Qt6 源码 [🚪下载链接](https://download.qt.io/official_releases/qt/6.5/6.5.0/single/qt-everywhere-src-6.5.0.zip)
-
-2. 进入构建目录并解压源码包至 `../qt-everywhere-src-6.5.0`
-
-3. 在构建目录启动 Visual Studio 的 Prompt 并配置 Qt（将 `$prefix` 替换为自己的 CMake 库搜索路径）
- ```sh
- ..\qt-everywhere-src-6.5.0\configure.bat ^
-     -cmake-generator "Visual Studio 17 2022" ^
-     -prefix $prefix ^
-     -shared ^
-     -debug-and-release ^
-     -submodules qtscxml ^
-     -nomake examples ^
-     -make tools ^
-     -- ^
-     -B build-msvc-2022
- ```
-
-4. 构建并安装
-```sh
-cmake --build build-msvc-2022 --parallel --target install
-```
-
-## 安装 OpenCV
-
-请参考 [deps/OpenCV/README.md](../../deps/OpenCV/README.md) 正确安装 OpenCV 依赖。
-
-> 本项目调整了部分 CMake 构建规则，请务必按照说明将 OpenCV 安装至 deps/OpenCV 目录，即便你已经通过 vcpkg 或其他方式在开发环境安装了该依赖。
-
 ## 配置 CMake
 
 ```sh
-cmake --preset "MSVC 2022"
+cmake --preset "Ninja Release"
 ```
 
 ## 构建并安装
 
 ```sh
-cmake --build build/msvc --config Release --target deploy-all
+cmake --build build/ninja-release --target deploy-all
 ```
 
 ## 运行
 
-完成构建后，可在 `install/msvc` 目录下找到可执行文件 `whmx-assistant.exe`。
+完成构建后，可在 `install/ninja-release` 目录下找到可执行文件 `whmx-assistant.exe`。
 
 ## 注意事项
 
