--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -1,4 +1,4 @@
-# 构建指南
+﻿# 构建指南
 
 > 以下仅提供 Windows 10 平台的构建指南
 
@@ -7,7 +7,7 @@
 请确保所有子模块被成功拉取。
 
 ```sh
-git clone https://github.com//maa-whmx.git --recursive
+git clone https://github.com/MAWHA/maa-whmx.git --recursive
 ```
 
 ## 配置 CMake
@@ -19,7 +19,7 @@ cmake --preset "Ninja Release"
 ## 构建并安装
 
 ```sh
-cmake --build build/ninja-release --target deploy-all
+cmake --build build/ninja-release --target whmx-assistant
 ```
 
 ## 运行
