Update CMakeLists to support launcher

--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -19,12 +19,12 @@ cmake --preset "Ninja Release"
 ## 构建并安装
 
 ```sh
-cmake --build build/ninja-release --target whmx-assistant
+cmake --build build/ninja-release --target all
 ```
 
 ## 运行
 
-完成构建后，可在 `install/ninja-release` 目录下找到可执行文件 `whmx-assistant.exe`。
+完成构建后，可在 `build/ninja-release/bin` 目录下找到可执行文件 `launcher.exe`。
 
 ## 注意事项
 
