Update build doc

--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -10,6 +10,10 @@
 git clone https://github.com/MAWHA/maa-whmx.git --recursive
 ```
 
+## 激活 Visual Studio Prompt Command 环境
+打开 x64 Native Tools Command Prompt for VS 2022 （可在开始菜单中搜索获得），并在其中切换到克隆完成的 maa-whmx 目录。
+下面的配置及构建步骤需在此环境中执行。
+
 ## 配置 CMake
 
 ```sh
