Add 'VS 2022 install guide' in build doc

--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -2,6 +2,10 @@
 
 > 以下仅提供 Windows 10 平台的构建指南
 
+## 安装构建套件
+安装 Visual Studio 2022，在安装时勾选“使用 C++ 的桌面开发”套件，然后安装。  
+你可以在这里 [Visual Studio 2022 下载](https://visualstudio.microsoft.com/zh-hans/) 获得 Visual Studio Community 2022，注意这是无需付费的。
+
 ## 拉取仓库
 
 请确保所有子模块被成功拉取。
