chore: use vcpkg and update build steps (#8)

--- a/docs/zh_CN/构建指南.md
+++ b/docs/zh_CN/构建指南.md
@@ -2,64 +2,41 @@
 
 > 以下仅提供 Windows 10 平台的构建指南
 
+## 安装构建套件
+
+安装 Visual Studio 2022，在安装时勾选“使用 C++ 的桌面开发”套件，然后安装。
+
+你可以在这里 [Visual Studio 2022 下载](https://visualstudio.microsoft.com/zh-hans/) 获得 Visual Studio Community 2022，注意这是无需付费的。
+
 ## 拉取仓库
 
 请确保所有子模块被成功拉取。
 
 ```sh
-git clone https://github.com//maa-whmx.git --recursive
+git clone https://github.com/MAWHA/maa-whmx.git --recursive
 ```
 
-## 安装 Qt6
+## 激活 Visual Studio Prompt Command 环境
 
-使用 MSVC 构建 Qt6 并安装至 CMake 库搜索路径，请至少在 Release 配置下构建 qtbase、qtscxml、tools 的动态链接库。
+打开 x64 Native Tools Command Prompt for VS 2022 （可在开始菜单中搜索获得），并在其中切换到克隆完成的 maa-whmx 目录。
 
-参考流程：
-
-1. 下载 Qt6 源码 [🚪下载链接](https://download.qt.io/official_releases/qt/6.5/6.5.0/single/qt-everywhere-src-6.5.0.zip)
-
-2. 进入构建目录并解压源码包至 `../qt-everywhere-src-6.5.0`
-
-3. 在构建目录启动 Visual Studio 的 Prompt 并配置 Qt（将 `$prefix` 替换为自己的 CMake 库搜索路径）
- ```sh
- ..\qt-everywhere-src-6.5.0\configure.bat ^
-     -cmake-generator "Visual Studio 17 2022" ^
-     -prefix $prefix ^
-     -shared ^
-     -debug-and-release ^
-     -submodules qtscxml ^
-     -nomake examples ^
-     -make tools ^
-     -- ^
-     -B build-msvc-2022
- ```
-
-4. 构建并安装
-```sh
-cmake --build build-msvc-2022 --parallel --target install
-```
-
-## 安装 OpenCV
-
-请参考 [deps/OpenCV/README.md](../../deps/OpenCV/README.md) 正确安装 OpenCV 依赖。
-
-> 本项目调整了部分 CMake 构建规则，请务必按照说明将 OpenCV 安装至 deps/OpenCV 目录，即便你已经通过 vcpkg 或其他方式在开发环境安装了该依赖。
+下面的配置及构建步骤需在此环境中执行。
 
 ## 配置 CMake
 
 ```sh
-cmake --preset "MSVC 2022"
+cmake --preset "Ninja Release"
 ```
 
 ## 构建并安装
 
 ```sh
-cmake --build build/msvc --config Release --target deploy-all
+cmake --build build/ninja-release --target all
 ```
 
 ## 运行
 
-完成构建后，可在 `install/msvc` 目录下找到可执行文件 `whmx-assistant.exe`。
+完成构建后，可在 `build/ninja-release/bin` 目录下找到可执行文件 `launcher.exe`。
 
 ## 注意事项
 
